--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Master&#39;s Student of Computer Vision">
+  <meta name="description" content="Master&#39;s Student">
 
   
   <link rel="alternate" hreflang="en-us" href="https://won-bae.github.io/404.html">
@@ -116,7 +116,7 @@
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="https://won-bae.github.io/404.html">
   <meta property="og:title" content="404 Page not found | Academic">
-  <meta property="og:description" content="Master&#39;s Student of Computer Vision"><meta property="og:image" content="https://won-bae.github.io/img/icon-192.png">
+  <meta property="og:description" content="Master&#39;s Student"><meta property="og:image" content="https://won-bae.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://won-bae.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
