--- a/404.html
+++ b/404.html
@@ -324,6 +324,13 @@
   
   
   
+  <h2>Latest</h2>
+  <ul>
+    
+      <li><a href="/publication/better-detection/">Better to Follow, Follow to Be Better: Towards Precise Supervision of Feature Super-Resolution for Small Object Detection</a></li>
+    
+  </ul>
+  
 
 </div>
 
