--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -343,6 +343,13 @@
 
   
   
+  <div>
+    <h2><a href="/publication_types/1/">1</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
 
   
 
