--- a/404.html
+++ b/404.html
@@ -327,7 +327,7 @@
   <h2>Latest</h2>
   <ul>
     
-      <li><a href="/publication/better-detection/">Better to Follow, Follow to Be Better: Towards Precise Supervision of Feature Super-Resolution for Small Object Detection</a></li>
+      <li><a href="/publication/better-detection/">better-detection</a></li>
     
   </ul>
   
