--- a/publication/index.html
+++ b/publication/index.html
@@ -406,7 +406,7 @@
 
   </span>
   (0001).
-  <a href="/publication/better-detection/">Better to Follow, Follow to Be Better: Towards Precise Supervision of Feature Super-Resolution for Small Object Detection</a>.
+  <a href="/publication/better-detection/">better-detection</a>.
   ICCV.
   
   <p>
