--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
-    <h1>Featured Publications</h1>
+    <h1>Selected Publications</h1>
     
   </div>
   <div class="col-12 col-lg-8">
