--- a/publication_types/1/index.html
+++ b/publication_types/1/index.html
@@ -347,6 +347,8 @@
     <h2><a href="/publication/detection/">Detection</a></h2>
     <div class="article-style">
       
+      In spite of recent success of proposal-based CNN models for object detection, it is still difficult to detect small objects due to the limited and distorted information that small region of interests (RoI) contain. One way to alleviate this issue is …
+      
     </div>
   </div>
   
