--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
 
 <div class="view-list-item">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-  <a href="/publication/detection/" >Detection</a>
+  <a href="/publication/detection/" >Better to Follow, Follow to Be Better: Towards Precise Supervision of Feature Super-Resolution for Small Object Detection</a>
 
   
 
