--- a/publication_types/1/index.html
+++ b/publication_types/1/index.html
@@ -344,10 +344,10 @@
   
   
   <div>
-    <h2><a href="/publication/detection/">Detection</a></h2>
+    <h2><a href="/publication/detection/">Better to Follow, Follow to Be Better: Towards Precise Supervision of Feature Super-Resolution for Small Object Detection</a></h2>
     <div class="article-style">
       
-      In spite of recent success of proposal-based CNN models for object detection, it is still difficult to detect small objects due to the limited and distorted information that small region of interests (RoI) contain. One way to alleviate this issue is …
+      Improved detecting small objects by super-resolving small objects using large objects as supervision
       
     </div>
   </div>
