--- a/404.html
+++ b/404.html
@@ -113,9 +113,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content="">
   <meta property="og:url" content="https://won-bae.github.io/404.html">
-  <meta property="og:title" content="404 Page not found | Academic">
+  <meta property="og:title" content="404 Page not found | ">
   <meta property="og:description" content="Master&#39;s Student"><meta property="og:image" content="https://won-bae.github.io/img/logo.jpg">
   <meta property="twitter:image" content="https://won-bae.github.io/img/logo.jpg"><meta property="og:locale" content="en-us">
   
@@ -136,7 +136,7 @@
 
 
 
-  <title>404 Page not found | Academic</title>
+  <title>404 Page not found | </title>
 
 </head>
 
@@ -179,7 +179,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"><img src="/img/logo.jpg" alt="Academic"></a>
+      <a class="navbar-brand" href="/"><img src="/img/logo.jpg" alt=""></a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
