--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="">
   
 
   <link rel="manifest" href="/index.webmanifest">
@@ -115,9 +115,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content="">
   <meta property="og:url" content="https://won-bae.github.io/">
-  <meta property="og:title" content="Academic">
+  <meta property="og:title" content="">
   <meta property="og:description" content="Master&#39;s Student"><meta property="og:image" content="https://won-bae.github.io/img/logo.jpg">
   <meta property="twitter:image" content="https://won-bae.github.io/img/logo.jpg"><meta property="og:locale" content="en-us">
   
@@ -152,7 +152,7 @@
 
 
 
-  <title>Academic</title>
+  <title></title>
 
 </head>
 
@@ -195,7 +195,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"><img src="/img/logo.jpg" alt="Academic"></a>
+      <a class="navbar-brand" href="/"><img src="/img/logo.jpg" alt=""></a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
