--- a/publication/detection/index.html
+++ b/publication/detection/index.html
@@ -113,9 +113,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content="">
   <meta property="og:url" content="https://won-bae.github.io/publication/detection/">
-  <meta property="og:title" content="Better to Follow, Follow to Be Better: Towards Precise Supervision of Feature Super-Resolution for Small Object Detection | Academic">
+  <meta property="og:title" content="Better to Follow, Follow to Be Better: Towards Precise Supervision of Feature Super-Resolution for Small Object Detection | ">
   <meta property="og:description" content="Improved detecting small objects by super-resolving small objects using large objects as supervision"><meta property="og:image" content="https://won-bae.github.io/img/logo.jpg">
   <meta property="twitter:image" content="https://won-bae.github.io/img/logo.jpg"><meta property="og:locale" content="en-us">
   
@@ -160,7 +160,7 @@
   
   "publisher": {
     "@type": "Organization",
-    "name": "Academic",
+    "name": "",
     "logo": {
       "@type": "ImageObject",
       "url": "https://won-bae.github.io/img/logo.jpg"
@@ -184,7 +184,7 @@
 
 
 
-  <title>Better to Follow, Follow to Be Better: Towards Precise Supervision of Feature Super-Resolution for Small Object Detection | Academic</title>
+  <title>Better to Follow, Follow to Be Better: Towards Precise Supervision of Feature Super-Resolution for Small Object Detection | </title>
 
 </head>
 
@@ -227,7 +227,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"><img src="/img/logo.jpg" alt="Academic"></a>
+      <a class="navbar-brand" href="/"><img src="/img/logo.jpg" alt=""></a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
