--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
     
     <h1>Biography</h1>
 
-    <p>I am currently a Master&rsquo;s student in Computer Science department at UMass. My research interest is in computer vision, especially, object recognition in self and weakly supervised manner. To better understand weak supervision cases, I am also focusing on latent variable models and generative models.</p>
+    <p>I am currently a Master&rsquo;s student in Computer Science department at UMass. My research interest is in computer vision, especially, object recognition in self and weakly supervised manner. My current research focuses on latent variable and generative models to better understand weak supervision cases.</p>
 
 
     <div class="row">
