updated cv and resume

--- a/publication/detection/index.html
+++ b/publication/detection/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Improved detecting small objects by super-resolving small objects using large objects as supervision">
+  <meta name="description" content=" Due to a lack of information that small region of interest contains, detecting small objects is still challenging problem. We improved the performance of small object detection through super-resolving the features of small objects to be similar to those of large objects. We investigated direct supervision using target features helps super-resolution only if they are properly extracted in terms of relative receptive field. We proposed a super-resolution model that can properly extract target features so that the features of small objects can be efficiently super-resolved, and as a result, they help better detect small objects. Our proposed method significantly improved the performance on various object detection datasets, especially for small objects, regardless of backbone strucutres. ">
 
   
   <link rel="alternate" hreflang="en-us" href="https://won-bae.github.io/publication/detection/">
@@ -116,7 +116,7 @@
   <meta property="og:site_name" content="WB">
   <meta property="og:url" content="https://won-bae.github.io/publication/detection/">
   <meta property="og:title" content="Better to Follow, Follow to Be Better: Towards Precise Supervision of Feature Super-Resolution for Small Object Detection | WB">
-  <meta property="og:description" content="Improved detecting small objects by super-resolving small objects using large objects as supervision"><meta property="og:image" content="https://won-bae.github.io/img/icon-192.png">
+  <meta property="og:description" content=" Due to a lack of information that small region of interest contains, detecting small objects is still challenging problem. We improved the performance of small object detection through super-resolving the features of small objects to be similar to those of large objects. We investigated direct supervision using target features helps super-resolution only if they are properly extracted in terms of relative receptive field. We proposed a super-resolution model that can properly extract target features so that the features of small objects can be efficiently super-resolved, and as a result, they help better detect small objects. Our proposed method significantly improved the performance on various object detection datasets, especially for small objects, regardless of backbone strucutres. "><meta property="og:image" content="https://won-bae.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://won-bae.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -166,7 +166,7 @@
       "url": "https://won-bae.github.io/img/icon-512.png"
     }
   },
-  "description": "Improved detecting small objects by super-resolving small objects using large objects as supervision"
+  "description": " Due to a lack of information that small region of interest contains, detecting small objects is still challenging problem. We improved the performance of small object detection through super-resolving the features of small objects to be similar to those of large objects. We investigated direct supervision using target features helps super-resolution only if they are properly extracted in terms of relative receptive field. We proposed a super-resolution model that can properly extract target features so that the features of small objects can be efficiently super-resolved, and as a result, they help better detect small objects. Our proposed method significantly improved the performance on various object detection datasets, especially for small objects, regardless of backbone strucutres. "
 }
 </script>
 
