--- a/publication/index.html
+++ b/publication/index.html
@@ -440,7 +440,7 @@
 
     
     <div class="article-style">
-      Improved detecting small objects by super-resolving small objects using large objects as supervision
+      Due to a lack of information that small region of interest contains, detecting small objects is still challenging problem. We improved …
     </div>
     
 
