--- a/publication/wsol/index.html
+++ b/publication/wsol/index.html
@@ -585,7 +585,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Computer Vision and Pattern Recognition</div>
+          <div class="col-12 col-md-9">Under review</div>
         </div>
       </div>
       <div class="col-md-1"></div>
